Artsyom_Busko/13.K8s/dp_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dp
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-alias: "dp.k8s-2.sa"
spec:
  rules:
    - host: dp.k8s-1.sa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sa-dp-drupal
                port:
                  number: 80
